--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Gesundheitssammlung
-description: Diese Dokumentensammlung stellt eine persönliche Sammlung, von mir Sebastiano Marletta, dar. Die beinhaltet keinerlei medizinische Beratung, Empfehlung oder ähnliches. Weiterhin ist sie frei von Werbung und Sponsorings.
+description: Dieses Kompendium stellt eine persönliche Sammlung von mir dar. Es beinhaltet keinerlei medizinische Beratung,
+  Empfehlung oder ähnliches. Weiterhin ist es frei von Werbung und Sponsorings.
