--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-midnight
-title: Gesundheitssammlung
-description: Dieses Kompendium stellt eine persönliche Sammlung von mir dar. Es beinhaltet keinerlei medizinische Beratung,
-  Empfehlung oder ähnliches. Weiterhin ist es frei von Werbung und Sponsorings.
+title: Health & Vital Dokumente
+description: Health & Vital Dokumente, Sammlung
+markdown: kramdown
